// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Most Read Page A11y I can see the skip to content link 1`] = `"Bỏ qua để xem nội dung"`;

exports[`Canonical Most Read Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Most Read Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Most Read Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "97",
  },
  {
    "p": "vietnamese.popular.read.page",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-vietnamese]",
  },
  {
    "x4": "[vi]",
  },
  {
    "x7": "[list-datadriven]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Phổ%20biến%20-%20BBC%20News%20Tiếng%20Việt]",
  },
  {
    "x11": "[2023-06-19T14:57:00Z]",
  },
  {
    "x12": "[2023-06-19T15:12:00Z]",
  },
]
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Tiếng Việt",
  "url": "/vietnamese",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 2`] = `
{
  "text": "Tại sao bạn có thể tin tưởng BBC News",
  "url": "https://www.bbc.com/vietnamese/institutional-49283563",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 3`] = `
{
  "text": "Điều khoản sử dụng",
  "url": "https://www.bbc.com/vietnamese/institutional-37622991",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 4`] = `
{
  "text": "Về BBC",
  "url": "https://www.bbc.com/vietnamese/institutional-37623840",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 5`] = `
{
  "text": "Chính sách riêng tư",
  "url": "https://www.bbc.com/vietnamese/institutional-37623841",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookie",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 7`] = `
{
  "text": "Liên hệ BBC",
  "url": "https://www.bbc.co.uk/vietnamese/send/u50853951",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 8`] = `
{
  "text": "BBC News các ngôn ngữ khác",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 9`] = `
{
  "text": "Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Most Read Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/vietnamese"`;

exports[`Canonical Most Read Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. BBC không chịu trách nhiệm nội dung các trang ngoài. Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài"`;

exports[`Canonical Most Read Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Tiếng Việt",
  "svg": <path
    d="M1174.48 172.736h66.12v12.265h-25.98v67.458h-14.16V185h-25.98v-12.265zM1253.98 172.736h14.16v79.723h-14.16v-79.723zM1282.19 172.736h53.296v11.931h-39.137v20.627h34.9v11.93h-34.9v23.304h41.255v11.93h-55.415v-79.722zm36.684-7.916a333.044 333.044 0 00-4.294-3.512 708.238 708.238 0 01-4.738-3.847 426.048 426.048 0 00-4.85 3.847 120.057 120.057 0 00-4.181 3.512h-13.158a501.422 501.422 0 018.084-7.47 225.73 225.73 0 017.86-6.802h12.6a228.475 228.475 0 017.86 6.802 509.751 509.751 0 018.085 7.47h-13.268zM1402.609 252.459a2557.81 2557.81 0 00-12.99-20.07 3983.605 3983.605 0 00-13.213-20.07 1254.76 1254.76 0 00-13.045-19.29v59.43h-13.603v-79.723h14.272a1764.111 1764.111 0 0119.791 29.213 2201.959 2201.959 0 0119.457 29.882v-59.095h13.603v79.723h-14.272zM1499.279 247.553c-2.453 1.338-5.241 2.508-8.363 3.512a63.053 63.053 0 01-9.812 2.286c-3.42.52-6.84.78-10.258.78-6.467 0-12.248-.948-17.338-2.843-5.092-1.895-9.422-4.627-12.99-8.195-3.567-3.568-6.3-7.934-8.195-13.101-1.896-5.166-2.843-10.983-2.843-17.45 0-6.317.965-12.023 2.9-17.115 1.93-5.09 4.737-9.459 8.417-13.101 3.68-3.642 8.084-6.43 13.213-8.363 5.129-1.932 10.889-2.9 17.282-2.9 9.812 0 18.435 1.971 25.869 5.91v13.27c-3.495-2.23-7.323-3.94-11.485-5.13-4.164-1.189-8.549-1.784-13.158-1.784-5.947 0-11.038 1.153-15.274 3.457-4.238 2.304-7.471 5.63-9.701 9.979s-3.345 9.608-3.345 15.777c0 6.244 1.076 11.578 3.233 16 2.156 4.424 5.277 7.787 9.366 10.09 4.087 2.306 9.032 3.457 14.83 3.457 2.453 0 4.886-.203 7.303-.613a41.996 41.996 0 007.08-1.84V220.57h-16.279v-11.261h29.548v38.244zM1611.67 172.736a3504.996 3504.996 0 01-15.22 39.917 2282.049 2282.049 0 01-15.89 39.806h-15.051a2581.798 2581.798 0 01-15.945-39.806 1735.01 1735.01 0 01-15.052-39.917h15.275a2843.485 2843.485 0 0011.54 32.837 3405.25 3405.25 0 0011.875 32.614 2154.128 2154.128 0 0011.986-32.614 2807.12 2807.12 0 0011.54-32.837h14.941zM1622.262 172.736h14.16v79.723h-14.16v-79.723zM1650.472 172.736h53.297v11.931h-39.137v20.627h34.9v11.93h-34.9v23.304h41.255v11.93h-55.415v-79.722zm36.685-7.916a333.044 333.044 0 00-4.294-3.512 708.238 708.238 0 01-4.738-3.847 426.048 426.048 0 00-4.85 3.847 120.057 120.057 0 00-4.181 3.512h-13.158a501.422 501.422 0 018.084-7.47 225.73 225.73 0 017.86-6.802h12.6a228.475 228.475 0 017.861 6.802 509.751 509.751 0 018.084 7.47h-13.268zM1714.026 172.736h66.12v12.265h-25.98v67.458h-14.16V185h-25.98v-12.265zM1678.236 260.899c2.304 0 4.126.613 5.464 1.84 1.338 1.226 2.006 3.027 2.006 5.407 0 2.23-.668 4.014-2.006 5.352-1.338 1.338-3.16 2.007-5.464 2.007-2.23 0-4.05-.67-5.463-2.007-1.411-1.338-2.118-3.122-2.118-5.352 0-2.38.707-4.181 2.118-5.408 1.413-1.226 3.233-1.839 5.463-1.839zM1341.777 138.951h16.168c-3.42 2.529-6.709 5-9.868 7.416a282.223 282.223 0 00-8.64 6.857h-13.493a259.675 259.675 0 017.917-7.36 493.944 493.944 0 017.916-6.913z"
  />,
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 1`] = `
{
  "text": "Tin chính",
  "url": "/vietnamese",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 2`] = `
{
  "text": "Việt Nam",
  "url": "/vietnamese/topics/ckdxnx1x5rnt",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 3`] = `
{
  "text": "Thế giới",
  "url": "/vietnamese/topics/cnlv9j1ekq0t",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 4`] = `
{
  "text": "Kinh tế",
  "url": "/vietnamese/topics/cez1ey7nzj3t",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 5`] = `
{
  "text": "Thể thao",
  "url": "/vietnamese/topics/ckdxnx1k7zxt",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 6`] = `
{
  "text": "Video",
  "url": "/vietnamese/topics/cl29j0ekkvdt",
}
`;

exports[`Canonical Most Read Page I can see the headline 1`] = `"Phổ biến"`;

exports[`Canonical Most Read Page I can see the list items 1`] = `"1Vụ hai đồn công an ở Đắk Lắk bị tấn công: 'Tức nước vỡ bờ vì mâu thuẫn đất đai và tôn giáo'?Cập nhật gần nhất: 19 tháng 6 năm 2023"`;

exports[`Canonical Most Read Page I can see the list items 2`] = `"2Chủ tịch Tập Cận Bình tiếp đón Ngoại trưởng Hoa Kỳ Antony BlinkenCập nhật gần nhất: 19 tháng 6 năm 2023"`;

exports[`Canonical Most Read Page I can see the list items 3`] = `"3Bamboo Airways thua lỗ nhưng có đổi dàn lãnh đạo tại kỳ họp cổ đông tới?Cập nhật gần nhất: 19 tháng 6 năm 2023"`;

exports[`Canonical Most Read Page I can see the list items 4`] = `"4Trung Quốc có lập căn cứ do thám Mỹ ở Cuba hay không? Cập nhật gần nhất: 19 tháng 6 năm 2023"`;

exports[`Canonical Most Read Page I can see the list items 5`] = `"5Việt Nam: Công tác quản trị ngôn luận chưa khoa họcCập nhật gần nhất: 19 tháng 6 năm 2023"`;

exports[`Canonical Most Read Page I can see the list items 6`] = `"6Việt Nam: Thiếu điện bộc lộ hạn chế về cơ cấu và bộ máy quan liêu?Cập nhật gần nhất: 18 tháng 6 năm 2023"`;

exports[`Canonical Most Read Page I can see the list items 7`] = `"745 người bị bắt: Thêm tin và ý kiến về vụ hai đồn công an ở Đắk Lắk bị tấn côngCập nhật gần nhất: 14 tháng 6 năm 2023"`;

exports[`Canonical Most Read Page I can see the list items 8`] = `"8Trịnh Văn Quyết bị khởi tố thêm tội 'lừa đảo'Cập nhật gần nhất: 25 tháng 8 năm 2022"`;

exports[`Canonical Most Read Page I can see the list items 9`] = `"9Người Việt kêu cứu từ 'bẫy lừa đảo' ở MyanmarCập nhật gần nhất: 18 tháng 6 năm 2023"`;

exports[`Canonical Most Read Page I can see the list items 10`] = `"10Bạo lực gia đình: 'Vợ tôi hãm hiếp tôi 10 năm'Cập nhật gần nhất: 19 tháng 5 năm 2020"`;

exports[`Canonical Most Read Page Main heading should match text 1`] = `"Phổ biến"`;

exports[`Canonical Most Read Page Most Read has item with rank 1`] = `
{
  "text": "Vụ hai đồn công an ở Đắk Lắk bị tấn công: 'Tức nước vỡ bờ vì mâu thuẫn đất đai và tôn giáo'?",
  "url": "/vietnamese/vietnam-65886929",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 2`] = `
{
  "text": "Chủ tịch Tập Cận Bình tiếp đón Ngoại trưởng Hoa Kỳ Antony Blinken",
  "url": "https://www.bbc.com/vietnamese/articles/cyxgg4vqkr6o",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 3`] = `
{
  "text": "Bamboo Airways thua lỗ nhưng có đổi dàn lãnh đạo tại kỳ họp cổ đông tới?",
  "url": "https://www.bbc.com/vietnamese/articles/crgddly302lo",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 4`] = `
{
  "text": "Trung Quốc có lập căn cứ do thám Mỹ ở Cuba hay không? ",
  "url": "https://www.bbc.com/vietnamese/articles/c72m8pvmz5qo",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 5`] = `
{
  "text": "Việt Nam: Công tác quản trị ngôn luận chưa khoa học",
  "url": "/vietnamese/forum-65949668",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 6`] = `
{
  "text": "Việt Nam: Thiếu điện bộc lộ hạn chế về cơ cấu và bộ máy quan liêu?",
  "url": "https://www.bbc.com/vietnamese/articles/cll095l9jn4o",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 7`] = `
{
  "text": "45 người bị bắt: Thêm tin và ý kiến về vụ hai đồn công an ở Đắk Lắk bị tấn công",
  "url": "https://www.bbc.com/vietnamese/articles/c6p3nx6ylego",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 8`] = `
{
  "text": "Trịnh Văn Quyết bị khởi tố thêm tội 'lừa đảo'",
  "url": "/vietnamese/business-62678279",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 9`] = `
{
  "text": "Người Việt kêu cứu từ 'bẫy lừa đảo' ở Myanmar",
  "url": "https://www.bbc.com/vietnamese/articles/cjk8zx3yygmo",
}
`;

exports[`Canonical Most Read Page Most Read has item with rank 10`] = `
{
  "text": "Bạo lực gia đình: 'Vợ tôi hãm hiếp tôi 10 năm'",
  "url": "/vietnamese/world-52698761",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/vietnamese/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Most Read Page SEO Canonical link 1`] = `"http://localhost:7080/vietnamese/popular/read"`;

exports[`Canonical Most Read Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Most Read Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Most Read Page SEO Heading level 1 1`] = `"Phổ biến"`;

exports[`Canonical Most Read Page SEO Lang attribute 1`] = `"vi"`;

exports[`Canonical Most Read Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "vi",
        "name": "Vietnamese",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/vietnamese/popular/read",
        "@type": "WebPage",
        "name": "Phổ biến",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
          "width": 1024,
        },
        "name": "BBC News Tiếng Việt",
        "publishingPrinciples": "https://www.bbc.com/vietnamese/institutional-49283563",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
      "url": "http://localhost:7080/vietnamese/popular/read",
    },
  ],
}
`;

exports[`Canonical Most Read Page SEO OG description 1`] = `"Phổ biến - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"`;

exports[`Canonical Most Read Page SEO OG image alt 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG locale 1`] = `"vi-VN"`;

exports[`Canonical Most Read Page SEO OG site name 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG title 1`] = `"Phổ biến - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG type 1`] = `"website"`;

exports[`Canonical Most Read Page SEO OG url 1`] = `"http://localhost:7080/vietnamese/popular/read"`;

exports[`Canonical Most Read Page SEO Page title 1`] = `"Phổ biến - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Most Read Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Most Read Page SEO Twitter creator 1`] = `"@bbcvietnamese"`;

exports[`Canonical Most Read Page SEO Twitter description 1`] = `"Phổ biến - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO Twitter image alt 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"`;

exports[`Canonical Most Read Page SEO Twitter site 1`] = `"@bbcvietnamese"`;

exports[`Canonical Most Read Page SEO Twitter title 1`] = `"Phổ biến - BBC News Tiếng Việt"`;
